# public-portal

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
static/: style.css
templates/: index.html  login.html
tests/: test_app.py
